[tool.poetry]
name = "hydroneerfishingbot"
version = "0.1.0"
description = ""
authors = ["Deko <gadse.deko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
mss = "^9.0.1"
opencv-python = "^4.7.0.72"
pyautogui = "^0.9.53"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
